# ogcapi-registry

./: .gitignore  CHANGELOG.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish.yml  release.yml  test.yml
dev/: 404.html  index.html  sitemap.xml
dev/architecture/: index.html
dev/examples/: index.html
dev/search/: search_index.json
dev/usage/: index.html
docs/: architecture.md  examples.md  index.md  usage.md
docs/diagrams/: composite-strategy.excalidraw  composite-strategy.md  composite-strategy.mermaid  conformance-classes.excalidraw  conformance-classes.md  conformance-classes.mermaid  data-models.excalidraw  data-models.md  data-models.mermaid  high-level-architecture.excalidraw  high-level-architecture.md  high-level-architecture.mermaid  ogc-registry-class.excalidraw  ogc-registry-class.md  ogc-registry-class.mermaid  protocol-hierarchy.excalidraw  protocol-hierarchy.md  protocol-hierarchy.mermaid  strategy-class-diagram.excalidraw  strategy-class-diagram.md  strategy-class-diagram.mermaid  strategy-selection-flow.excalidraw  strategy-selection-flow.md  strategy-selection-flow.mermaid  version-aware-flow.excalidraw  version-aware-flow.md  version-aware-flow.mermaid  workflow.excalidraw  workflow.md  workflow.mermaid
examples/: validate_ogc_api_server.py
src/ogcapi_registry/: __init__.py  client.py  models.py  ogc_registry.py  ogc_types.py  protocols.py  registry.py  strategy_registry.py  validator.py
src/ogcapi_registry/strategies/: base.py  common.py  features.py  other.py  processes.py  records.py  tiles.py
src/openapi_registry_validator/: __init__.py  registry.py  validator.py
tests/: __init__.py  test_client.py  test_error_severity.py  test_models.py  test_ogc_registry.py  test_ogc_types.py  test_protocols.py  test_registry.py  test_strategies.py  test_strategy_registry.py  test_validator.py
