[project]
name = "ogcapi-registry"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Claude", email = "noreply@anthropic.com" },
    { name = "Francesco Bartoli", email = "xbartolone@gmail.com" }
]
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "jsonschema>=4.25.1",
    "openapi-pydantic>=0.5.1",
    "pydantic>=2.12.5",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
    "pytest-httpx>=0.36.0",
]
